--- a/doc/admin.texinfo
+++ b/doc/admin.texinfo
@@ -1168,7 +1168,7 @@ the user's certificate and private key.
 @item PKCS11:[@b{module_name=}]@i{module-name}[@b{:slotid=}@i{slot-id}][@b{:token=}@i{token-label}][@b{:certid=}@i{cert-id}][@b{:certlabel=}@i{cert-label}]
 All keyword/values are optional.
 @i{module-name} specifies the location of a library implementing
-@code{PKCS #11}.  If a value is encountered with not keyword, it
+@code{PKCS #11}.  If a value is encountered with no keyword, it
 is assumed to be the @i{module-name}.  If no @i{module-name} is
 specified, the default is @code{opensc-pkcs11.so}. 
 @b{slotid=} and/or @b{token=} may be specified to force the use of a
